fixed the configuration issues of the Vite app and initiated the Sign-up page for the app

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- index.html in the root -->
+<!-- public/index.html -->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,5 +7,6 @@
   </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/src/index.jsx"></script> <!-- This is important -->
   </body>
 </html>
